# combinedlog-parser

./: README.md  combinedlog-parser.cabal
src/: Main.hs
src/Text/: CombinedLog.hs
src/Text/CombinedLog/: Parser.hs  Types.hs
src/exec/: Main.hs
src/lib/Text/CombinedLog/: Parser.hs  Types.hs
src/lib/Text/Log/: Combined.hs
src/lib/Text/Log/Combined/: Parser.hs  Types.hs
