name:                combinedlog-parser
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Derek Schaefer
maintainer:          derek.schaefer@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >= 1.10

executable combinedlog-parser
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       combinedlog-parser,
                       base,
                       text,
                       attoparsec,
                       time,
                       old-locale

library
  exposed-modules:     Text.CombinedLog
  other-modules:       Text.CombinedLog.Types,
                       Text.CombinedLog.Parser
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.6 && < 4.7,
                       text >= 1.1.1.3,
                       attoparsec >= 0.12.1.1,
                       time >= 1.4.2,
                       old-locale >= 1.0.0.6
