name:                combinedlog-parser
version:             0.1.0.0
synopsis:            Combined Log format parser
-- description:         
license:             MIT
license-file:        LICENSE
author:              Derek Schaefer
maintainer:          derek.schaefer@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >= 1.10

executable combinedlog-parser
  main-is:             Main.hs
  build-depends:       combinedlog-parser,
                       base, bytestring
  hs-source-dirs:      src/exec
  default-language:    Haskell2010

library
  exposed-modules:     Text.CombinedLog,
                       Text.CombinedLog.Types,
                       Text.CombinedLog.Parser
  build-depends:       base >= 4.6 && < 4.7,
                       bytestring >= 0.10.0.2,
                       attoparsec >= 0.12.1.1,
                       time >= 1.4.2,
                       old-locale >= 1.0.0.6
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
