name:                  combinedlog-parser
version:               0.1.0.0
synopsis:              CombinedLog format parser.
description:           CombinedLog format parser.
license:               MIT
license-file:          LICENSE
author:                Derek Schaefer
maintainer:            derek.schaefer@gmail.com
copyright:             (c) 2014 Derek Schaefer
category:              Text
build-type:            Simple
cabal-version:         >= 1.10

executable combinedlog-parser
  main-is:             Main.hs
  build-depends:       base,
                       combinedlog-parser,
                       bytestring
  hs-source-dirs:      src/bin
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

library
  exposed-modules:     Text.Log.Combined,
                       Text.Log.Combined.Types,
                       Text.Log.Combined.Parser
  build-depends:       base >= 4.7 && < 4.8,
                       commonlog-parser >= 0.1.0.0,
                       bytestring >= 0.10.0.2,
                       attoparsec >= 0.12.1.1,
                       time == 1.4.2,
                       old-locale == 1.0.0.6
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -O2 -Wall
